Display inputs and values in a table

--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ form {
   flex-direction: column;
 }
 
-.group {
+tr {
   display: flex;
   margin-bottom: 15px;
 }
 
-.unit {
+td {
   display: flex;
 }
 
